--- a/index.html
+++ b/index.html
@@ -2,10 +2,173 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="path/to/jquery.js" type="text/javascript"></script>
+<script src="path/to/jquery.mmenu.min.js" type="text/javascript"></script>
+<link href="path/to/jquery.mmenu.css" type="text/css" rel="stylesheet" />
+
+<script src="path/to/jquery.js" type="text/javascript"></script>
+   <script src="path/to/jquery.mmenu.min.all.js" type="text/javascript"></script>
+   <link href="path/to/jquery.mmenu.all.css" type="text/css" rel="stylesheet" />
+<title>Jamel Lawson</title>
+<style>
+	*{
+		margin:0;
+		padding:0;	
+	}
+	
+	.wrapper{
+		max-width:640px;
+		height:auto;
+		margin-right:auto;
+		margin-left:auto;
+		position:absolute;
+		top:0;
+		bottom:0;
+		left:0;
+		right:0;
+	}
+	
+	.placeholder{
+		position:relative;
+		width:100%;
+		height:100%;	
+	}
+	
+	.header{
+		background-color:#021042;
+		width:100%;
+		height:50px;
+		float:left;
+		position:relative;
+	}
+	
+	.banner{
+		position:relative;
+		width:100%;
+	}
+	
+	.banner .banner-background{
+		width:100%;
+		position:relative;
+		vertical-align:bottom;
+	}
+	
+	.banner .logo{
+		position:absolute;
+		top:0px;
+		left:0px;
+		right:0px;
+	}
+	
+	.banner-menu-button{
+		position:absolute;
+		top:60px;
+		right:15px;
+		z-index:100;
+		width:66px;
+		height:66px;
+		background-image:url(images/menu-button.png);
+	}
+	
+	.main-content{
+		width:100%;
+		min-height:85%;
+		margin-bottom:50px;
+		float:left;
+	}
+	
+	.main-title{
+		color:#06248A;
+		font-family:"Liberation Sans Regular", "Arial", "sans-serif";
+		font-size:1.8em;
+		text-align:center;
+		font-weight:400;
+		width:100%;
+		float:left;
+		clear:both;
+	}
+	
+	.main-content-image{
+		width:100%;
+		position:relative;
+		vertical-align:bottom;
+		margin-top:50px;
+		float:left;
+		clear:both;
+	}
+	.main-content #main-title-top{
+		margin-top:25px;	
+		float:left;
+		clear:both;
+	}
+	
+	.main-content p{
+		color:#06248A;
+		font-family:"Liberation Sans Regular", "Arial", "sans-serif";
+		font-size:1.3em;
+		text-align:justify;
+		font-weight:400;
+		width:80%;
+		float:left;
+		clear:both;
+		padding-left:10%;
+		padding-right:10%;
+		margin-top:25px;
+		float:left;
+		clear:both;
+	}
+@media screen and (max-width: 480px){
+	.main-title{
+		font-size:1.3em;	
+		
+	}
+	
+	.main-content p{
+		font-size:0.9em;	
+	}
+	
+	.banner-menu-button{
+		width:33px;
+		height:33px;
+		background-image:url(images/menu-button_320.png);
+		
+	}
+}
+
+</style>
 </head>
 
 <body>
-<h1>Hello World</h1>
+<div>
+<div class="wrapper">
+	<div class="placeholder">
+        <div class="header"></div>
+        <div class="banner">
+        	<div class="image-box"><img class="banner-background" src="images/banner-640_02.png"></div>
+            <div class="banner-menu-button">
+            	<nav id="my-menu">
+            	<ul>
+                	<li><a href="/">Home</a></li>
+                    <li><a href="#">Skills</a></li>
+                    <li><a href="#">Education</a></li>
+                    <li><a href="#">Experience</a></li>
+                    <li><a href="#">Contact Me</a></li>
+               </ul>
+               </nav>
+            </div>
+        </div><!--End of Banner-->
+        <div class="main-content"> 
+        <h1 id="main-title-top" class="main-title">Talented Web Developer</h1>
+        <h1 class="main-title">and Engineer</h1>
+        <img class="main-content-image" src="images/computer-screen.png">
+        <p>Thank you for taking the time to check out my site. I am a web developer who has worked for several years designing and perfecting websites to better serve businesses, companies, and entrepreneurs. I believe that having a convenient and responsive website is a crucial part of today’s businesses, separating those who succeed from the rest.</p>
+        <p>Since graduating from the University of Iowa, I have worked for an amazing company in Champaign, Illinois. Thanks to all the amazing things I learned there, I’ve been able to hone a multitude of web development skills that I now use to help my clients. I can create websites with HTML, CSS, JavaScript/Query, and PHP. I use Drupal as the main CMS.</p>
+        <p>One of the projects I’m most proud of is the optimizing of Johns Hopkins website. I had the honor of perfecting their layout and creating the design that can be used across platforms, for mobile convenience.</p>
+        </div><!--End of Main Content-->
+        <div class="header"></div>
+    </div><!--End of Placeholder-->
+</div><!--End of Wrapper-->
+</div>
 </body>
 </html>
